--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - r-anylib
   - aioeasywebdav=2.4.0=py36_1000
   - aiohttp=3.6.1=py36h01d97ff_0
   - appdirs=1.4.3=py_1
